--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <div class="header">
+      <div id="logo">
         <h1>Martin<span>Pluhař</span></h1>
         <small>webdeveloper</small>
       </div>
