--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <img
           src="obrazky/avatar.jpeg"
-          alt="Programátor HoBi"
+          alt="Martin img"
           
         />
       </div>
