--- a/dovednosti.html
+++ b/dovednosti.html
@@ -9,18 +9,36 @@
 </head>
  
 <body>
+	<header>
+		<div id="logo">
+		  <h1>Martin<span>Pluhař</span></h1>
+		  <small>webdeveloper</small>
+		</div>
+		<nav>
+		  <ul>
+			<li class="aktivni"><a href="index.html">Domů</a></li>
+			<li><a href="omne.html">O mně</a></li>
+			<li><a href="dovednosti.html">Dovednosti</a></li>
+			<li><a href="reference.html">Reference</a></li>
+			<li><a class="kontakt-tlacitko" href="kontakt.html">Kontakt</a></li>
+		  </ul>
+		</nav>
+	  </header>
+	<article>
+		<div id="centrovac">
+	<header>
 	<h1>Dovednosti</h1>
-	
-	<table>
+	</header>
+	<table id="dovednosti">
 		<tr>
 			<td>
-				<img src="obrazky/html.png" alt="HTML" />
+				<img  src="obrazky/html-5.png" alt="HTML" />
 			</td>
 			<td>
-				<img src="obrazky/java.png" alt="Java" />
+				<img  src="obrazky/css-3.png" alt="CSS3" />
 			</td>
 			<td>
-				<img src="obrazky/pascal.png" alt="Pascal" />
+				<img  src="obrazky/js.png" alt="Javascript" />
 			</td>
 		</tr>
 		<tr>
@@ -29,17 +47,22 @@
 				<p>S HTML začínám a umím vytvořit jednoduché webové stránky, jako jsou tyto.</p>
 			</td>
 			<td>
-				<h2>Java</h2>
-				<p>Javu se učím z tutoriálů na devbook.cz, dokáži tvořit jednoduché konzolové i okenní aplikace.</p>
+				<h2>CSS3</h2>
+				<p>Stránky zatím styluji CSS3.</p>
 			</td>
 			<td>
-				<h2>Pascal</h2>
-				<p>Pascal nás učí ve škole, ale raději se učím moderní jazyky z devbooku.</p>
+				<h2>Javascript</h2>
+				<p>Javascript jsem se naučil na webu Codecademy. Zatím zvládám vanilla JS. Chci následovat Reactem, NodeJS a Typescriptem.</p>
 			</td>
 		</tr>
 	</table>
 	
-	<p><a href="index.html">Zpět na hlavní stranu</a></p>
+</div>
+</article>
+<footer>
+	Vytvořil &copy;Martin Pluhař 2022 pro
+	<a href="https://itnetwork.cz">itnetwork.cz</a>
+  </footer>
 </body>
  
 </html>
